2009-12-02  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries): Replace superfluous
	save-excursion with save-current-buffer.
	Widen before searching.  (Bug#5093)
	(diary-list-sexp-entries): Remove superfluous save-excursion.

2009-12-02  Michael Welsh Duggan  <mwd@cert.org>

	* woman.el (woman-make-bufname): Handle man-pages with "." in the
	name.  (Bug#5038)

2009-12-02  Andreas Politz  <politza@fh-trier.de>  (tiny change)

	* ido.el (ido-file-internal): Handle filenames at point that do
	not have a directory part.  (Bug#5049)

2009-12-02  Juanma Barranquero  <lekktu@gmail.com>

	* mpc.el (mpc-intersection, mpc-host, mpc-songs-playlist)
	(mpc-songs-jump-to, mpc-resume): Doc fixes.

2009-12-01  Rob Riepel  <riepel@networking.Stanford.EDU>

	* emulation/tpu-extras.el (tpu-cursor-free-mode): Emit message.
	(tpu-set-cursor-free, tpu-set-cursor-bound): Don't emit a message
	any more.

2009-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-insert-input): Ignore clicks to the right of
	the field.  Reported by Bob Nnamtrop <bobnnamtrop@gmail.com>.

	* vc.el (vc-print-log-internal): Don't wait for the prcess to
	terminate before setting up the major mode.

	* pcmpl-unix.el (pcomplete/cd): Complete more than one argument, just
	in case.

	* pcomplete.el (pcomplete-std-complete): Don't try to complete past
	the last element.

	* simple.el (normal-erase-is-backspace-mode): Fix thinko in message.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* window.el (window--display-buffer-2): Fix previous changes.

2009-12-01  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-setup-hook, mail-send-hook): Doc fixes.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Add mpc.elc.

2009-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mpc.el: New file.

2009-12-01  Glenn Morris  <rgm@gnu.org>

	* window.el (window-to-use): Define for compiler.
